# 3d_collision_detection

./: CMakeLists.txt  README.md  copy.txt
OpenGL/: CMakeLists.txt
include/collision/: BVH.h  GJK.h  Octree.h  SAT.h  SweepAndPrune.h  UniformGrid.h
include/core/: CollisionManager.h  Object3D.h
include/decomposition/: ConvexDecomposition.h  ConvexHull.h
include/geometry/: AABB.h  BoundingVolume.h  ConvexHull.h  OBB.h
include/math/: Matrix3x3.h  Matrix4x4.h  Quaternion.h  Vector3.h
src/: main.cpp  test.cpp
src/collision/: BVH.cpp  GJK.cpp  SAT.cpp
src/core/: CollisionManager.cpp  Object3D.cpp
src/decomposition/: ConvexDecomposition.cpp  convexHull.cpp
src/geometry/: AABB.cpp  OBB.cpp
src/math/: Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector3.cpp  Vector4.cpp
test/OpenGL/: main.cpp  test.cpp
test1/OpenGL/: main.cpp
